# tl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  deny.toml  dist-workspace.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
docs/design/: 0000-this-is-template.md  0001-tl-translation-tool.md  0002-chat-mode.md  0003-multi-provider-support.md  0004-interactive-configuration.md  0005-translation-style.md  0006-release-workflow.md
scripts/: release-notes-template.md  update-release-notes.sh
src/: fs.rs  lib.rs  main.rs  output.rs  paths.rs
src/cache/: mod.rs  sqlite.rs
src/chat/: command.rs  mod.rs  session.rs  ui.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: chat.rs  configure.rs  mod.rs  providers.rs  styles.rs  translate.rs
src/config/: manager.rs  mod.rs
src/input/: mod.rs  reader.rs
src/style/: mod.rs
src/translation/: client.rs  language.rs  mod.rs  prompt.rs  sse_parser.rs
src/ui/: mod.rs  spinner.rs  theme.rs
tests/: cli_smoke.rs  config_priority.rs
