[package]
name = "tl-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A streaming, cached translation CLI using OpenAI-compatible endpoints"
repository = "https://github.com/d2verb/tl"
homepage = "https://github.com/d2verb/tl"
readme = "README.md"
keywords = ["cli", "translation", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
indicatif = "0.18"
inquire = { version = "0.9", features = ["editor"] }
dirs = "6"
anyhow = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
owo-colors = "4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
assert_cmd = "2"
predicates = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "warn"
expect_used = "warn"

must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
